# CustomDataset

./: CustomDataset.py  LabelManager.py  README.md  custom_dataset.py  environment.yml  label_manager.py  pyproject.toml  requirements.txt  setup.cfg  test_labels.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: tests.yml
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst
src/dataset/: __init__.py  augmentation_manager.py  config.py  custom_dataset.py  dataset.py  filtration_cache.py  filtration_cacheing.py  label_extractor.py  label_manager.py  preprocess.py  util.py
tests/: config.py  test_example.py  test_label_extractor.py
tests/test_files/: create_test_images.ipynb  dog.tif  test_image.tif
