[metadata]
name = custom_dataset
version = 0.0.1
author = Adin Solomon
author_email = adinbsolomon@gmail.com
description = testing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Digital-Pathology/CustomDataset
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    unified-image-reader
    filtration
    albumentations
dependency_links =
    "https://github.com/Digital-Pathology/UnifiedImageReader/tarball/main#egg=unified-image-reader"
    "https://github.com/Digital-Pathology/Filtration/tarball/main#egg=filtration"

[options.packages.find]
where = src